# serial

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  annotated.html  annotated_dup.js  classes.html  classserial_1_1_serial-members.html  classserial_1_1_serial.html  classserial_1_1_serial.js  dir_44f42edf5dd23d4deca0321224e9ce90.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f22bcfb215a71b7a0026d80fdd46745d.html  dir_f22bcfb215a71b7a0026d80fdd46745d.js  files.html  functions.html  functions_func.html  index.html  md__github_workspace__l_i_c_e_n_s_e.html  md__github_workspace__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  serial_8hpp_source.html  structserial_1_1_timeout-members.html  structserial_1_1_timeout.html  structserial_1_1_timeout.js
.github/workflows/: generate_doc.yml
docs/: Doxyfile
include/serial/: serial.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  searchdata.js
src/: serial.cpp  serial.win.cpp
